Fixed: footer theming on mobile (#108)

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -143,7 +143,7 @@ body {
 }
 
 
-.fixed-source {
+/* .fixed-source {
     position: fixed;
-    right: 20%; /* Adjust as needed */
-}
+    right: 20%;
+} */
